2011-05-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/clam.boot, src/interp/comp.lisp,
	src/interp/bootlex.lisp, src/interp/g-boot.boot
	src/interp/vmlisp.lisp: Simplify COMP370.

2011-05-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-boot.boot, src/interp/macros.lisp:
	Use NREVERSE instead of NREVERSE0.

2011-05-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/comp.lisp, src/interp/g-boot.boot,
	src/interp/macros.lisp: Simplify compilation of iterators.

2011-05-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/files.spad.pamphlet: Do not use RPACKFILE.

2011-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Stop build on error in
	recursive make.

2011-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intalg.spad.pamphlet,
	src/algebra/efupxs.spad.pamphlet,
	src/algebra/curve.spad.pamphlet,
	src/algebra/efstruc.spad.pamphlet: Changes to speed
	up compilation.


2011-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/boot/tytree1.boot: Fix build with newer sbcl.

2011-05-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/apply.boot, src/interp/slam.boot,
	src/interp/nruncomp.boot, src/interp/compiler.boot,
	src/interp/bootlex.lisp, src/interp/define.boot,
	src/interp/lisplib.boot, src/interp/package.boot,
	src/interp/spad.lisp: Misc cleanups.
	src/interp/def.lisp: Remove.


2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-coerce.boot, src/interp/debug.lisp,
	src/interp/nrungo.boot, src/interp/bootlex.lisp,
	src/interp/macros.lisp, src/interp/vmlisp.lisp:
	Misc cleanups.

2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/boot/ptyout.boot: Add source as comments to the
	output of BOOTCLAM.

2011-04-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-search.boot, src/interp/clam.boot,
	src/interp/i-toplev.boot, src/interp/Makefile.in:
	Fix recent breakage.
