@@ -125,8 +125,6 @@
           ((VECP COMPERAND-2) (LEXVGREATERP COMPERAND-1 COMPERAND-2) )
           ('else t)))
       ((VECP COMPERAND-2) NIL)
-      ((OR (IVECP COMPERAND-1) (RVECP COMPERAND-1)) (BREAK))
-      ((OR (IVECP COMPERAND-2) (RVECP COMPERAND-2)) (BREAK))
       ((stringp COMPERAND-1)
         (COND
           ((stringp COMPERAND-2)
@@ -157,8 +155,6 @@
             (LEXGREATERP (BPINAME COMPERAND-1) (BPINAME COMPERAND-2)) )
           ('else t)))
       ((FBPIP COMPERAND-2) NIL)
-      ((MBPIP COMPERAND-1) (BREAK))
-      ((MBPIP COMPERAND-2) (BREAK))
       ((> (SXHASH COMPERAND-1) (SXHASH COMPERAND-2)))))
 
 (DEFUN LEXVGREATERP (VECTOR-COMPERAND-1 VECTOR-COMPERAND-2)
@@ -206,8 +202,6 @@
           ((VECP COMPERAND-2) (VGREATERP COMPERAND-1 COMPERAND-2) )
           ('else t)))
       ((VECP COMPERAND-2) NIL)
-      ((OR (IVECP COMPERAND-1) (RVECP COMPERAND-1)) (BREAK))
-      ((OR (IVECP COMPERAND-2) (RVECP COMPERAND-2)) (BREAK))
       ((stringp COMPERAND-1)
         (COND
           ((stringp COMPERAND-2)
@@ -232,8 +226,6 @@
             (GGREATERP (BPINAME COMPERAND-1) (BPINAME COMPERAND-2)) )
           ('else t)))
       ((FBPIP COMPERAND-2) NIL)
-      ((MBPIP COMPERAND-1) (BREAK))
-      ((MBPIP COMPERAND-2 (BREAK)))
       ((> (SXHASH COMPERAND-1) (SXHASH COMPERAND-2)))))
 
 (DEFUN VGREATERP (VECTOR-COMPERAND-1 VECTOR-COMPERAND-2)
