@@ -106,7 +106,7 @@
          GETSTR QCADADR PRIN2CVEC CURRENTTIME $REPLACE UNIONQ
          NREMOVEQ CURINSTREAM MAKE-OUTSTREAM APPLX LASTNODE SUBSTQ TRUEFN
          |last| RPLACSTR SETQP QCADDR QCAADAR QCDDAAR |intersection|
-         HASHTABLE-CLASS *COMP370-APPLY* QSETVELT MOVEVEC
+         HASHTABLE-CLASS QSETVELT MOVEVEC
          ID DEFINE-FUNCTION MSUBSTQ |nsubst| SUB1 NUMBEROFARGS
          VMREAD SMINTP $SCREENSIZE QCDADDR COMPRREAD GENSYMP IFCAR QSETQ
          QCADDAR *LISP-SOURCE-FILETYPE* KOMPILE INPUT UEQUAL COMPRWRITE
@@ -200,8 +200,6 @@
    vmlisp::strpos
    vmlisp::strposl
    vmlisp::substring
-   vmlisp::ivecp
-   vmlisp::rvecp
    vmlisp::dig2fix
    vmlisp::rnump
    vmlisp::fix
