@@ -1,5 +1,12 @@
 2011-05-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/sys-pkg.lisp, src/interp/parsing.lisp
+	src/interp/primitives.lisp, src/interp/g-opt.boot,
+	src/interp/macros.lisp, src/interp/vmlisp.lisp:
+	Misc cleanups.
+
+2011-05-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/clam.boot, src/interp/comp.lisp,
 	src/interp/bootlex.lisp, src/interp/g-boot.boot
 	src/interp/vmlisp.lisp: Simplify COMP370.
